--- a/style.css
+++ b/style.css
@@ -2,107 +2,79 @@
     margin:0;
     padding: 0;
     font-family: sans-serif;
+    box-sizing: border-box;
 }
 
 .main{
     width: 100%;
+    min-width: 480px;
     height: 100vh;
-    position: relative;
-    overflow: hidden;
+    max-height: 680px;
     background: linear-gradient(to right,#9c27b0,#8ecdff);
+    
 }
 
-.title {
-
-    width: 5rem;
-    position: absolute;
-    top: 10%;
-    right: 10%;
-    align-items: center;
-}
-.title h1{
-    font-size:2rem;
-    color: #fff;
-    text-align: center;
-}
-.information{
-    width: 100vw;
-    height: 100vh;
-    position: absolute;
-    top: 50%;
-    left: -10%;
-    transform: translateY(-50%);
-}
 #circle{
     width: 100vw;
     height: 100vh;
-    position: absolute;
-    top: 0;
-    left: 0;
-    border-radius: 50%;
-   transform: rotate(0deg);
-   transition: 1s;
-}
+    background-color: transparent;
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    grid-template-rows: repeat(5,1fr);
+    justify-content: center;
+    align-items: center;
+    transition: 1s;
 
-.feature{
-    position: absolute;
-    display: flex;
-    color: #fff ;
 }
-.feature div{
-    margin-left: 3vw;
+#circle div{
+    color: #fff;
+    min-width: 120px;
+    min-height: 120px;
+    background-color: transparent;
+    align-items: center;
+    
 }
-.feature div p{
-margin-top:1vh ;
-}
-
 .one{
-    top: 45vh;
-    right: 5vw;
+    grid-area:3/5/4/6 ;
 }
 .two{
-    top: 1.5vh;
-    left: 35vw;
-    transform: rotate(-90deg);
+    grid-area:1/3/2/4 ;
+    transform: rotate(-90deg) ;
 }
 .three{
-    bottom: 45vh;
-    left:5vw;
+    grid-area:3/1/4/2 ;
     transform: rotate(-180deg);
-
 }
 .four{
-    bottom: 1.5vh;
-    right: 35vw;
+    grid-area:5/3/6/4 ;
     transform: rotate(-270deg);
-
 }
 .prayer{
     width: 30vw;
     position: absolute;
-    top: 50%;
-    left: 22%;
-    transform: translateY(-50%);
+    bottom: 30%;
+    left: 20%;
     z-index: 1;
 }
 .controls{
     position: absolute;
-    right: 10%;
-    top: 70%;
-    transform: translateY(-50%);
-    text-align: center
+    bottom: 10%;
+    right: 5%;
+    z-index: 1;
 }
 .controls h3{
     margin: 1.5vh 0;
     color: #fff;
 }
 #upBtn{
-    width: 3.5vw ;
+    margin: 0 3.5vh;
+    width: 5vw ;
     cursor: pointer;
 
 }
 #downBtn{
-    width: 3.5vw;
+    margin: 0 3.5vh;
+    width: 5vw;
     cursor: pointer;
     transform: rotate(180deg);
 }
@@ -117,4 +89,4 @@ margin-top:1vh ;
     left: 0;
     top: 0;
 
-}
+} 
