--- a/style.css
+++ b/style.css
@@ -6,17 +6,21 @@
 }
 
 .main{
-    width: 100%;
-    min-width: 480px;
+    width: 100vh;
     height: 100vh;
-    max-height: 680px;
+    position: absolute;
+    top: 0;
+    left: 10%;
     background: linear-gradient(to right,#9c27b0,#8ecdff);
     
 }
 
 #circle{
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: -5%;
     background-color: transparent;
     display: grid;
     grid-template-columns: repeat(5,1fr);
@@ -24,7 +28,7 @@
     justify-content: center;
     align-items: center;
     transition: 1s;
-
+    z-index: 1;
 }
 #circle div{
     color: #fff;
@@ -50,17 +54,17 @@
     transform: rotate(-270deg);
 }
 .prayer{
-    width: 30vw;
+    width: 30vh;
     position: absolute;
     bottom: 30%;
     left: 20%;
-    z-index: 1;
+    z-index: 3;
 }
 .controls{
     position: absolute;
     bottom: 10%;
     right: 5%;
-    z-index: 1;
+    z-index: 3;
 }
 .controls h3{
     margin: 1.5vh 0;
@@ -82,11 +86,11 @@
     width: 0;
     height: 0;
     border-top: 50vh solid #fff;
-    border-right: 40vw solid transparent;
+    border-right: 40vh solid transparent;
     border-bottom: 50vh solid #fff;
-    border-left: 40vw solid #fff;
+    border-left: 40vh solid #fff;
     position: absolute;
     left: 0;
     top: 0;
-
+    z-index: 2;
 } 
