--- a/style.css
+++ b/style.css
@@ -4,17 +4,42 @@
     font-family: sans-serif;
     box-sizing: border-box;
 }
-
+body{
+    width: 100%;
+    height: 100vh;
+    max-height: 110vh;
+    background: linear-gradient(to right,#cee0d7,#8ecdff);
+    
+}
 .main{
     width: 100vh;
     height: 100vh;
     position: absolute;
     top: 0;
-    left: 10%;
+    left: 20%;
     background: linear-gradient(to right,#9c27b0,#8ecdff);
     
 }
+.logo{
+    position: absolute;
+    top: 10%;
+    right: 5%;
+    background-color: #ff8177;
+    background-image: linear-gradient(to top, #110c0d 0%,#ffb199 100%) ;
+    background-size: 100%;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color:transparent;
+    -moz-text-fill-color:transparent;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 5vh;
+    z-index: 55;
 
+}
 #circle{
     width: 100%;
     height: 100%;
