--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
 body{
     width: 100%;
     height: 100vh;
-    max-height: 110vh;
-    background: linear-gradient(to right,#cee0d7,#8ecdff);
+    max-height: 636px;
+    background: linear-gradient(to right,#cee0d7 0%,#8ecdff 100%);
     
 }
 .main{
@@ -39,6 +39,12 @@ body{
     font-size: 5vh;
     z-index: 55;
 
+}
+.sonan{
+    width: 100vh;
+    position: absolute;
+    top: 100vh;
+    left: 20%;
 }
 #circle{
     width: 100%;
